# MultiModal-AIC

./: .gitignore  README.md  apdative_sampling.py  caption_keyframes.py  clip_model.py  config.py  extract_embed.py  extract_keyframes.py  jina_clip_v2_model.py  main.py  public_round_tasks.jsonl  pyproject.toml  retrive.py  run_pipeline.sh  score.py  shot_detection.py  siglip2_model.py  submission.json  train.py
output/ocr/: ocr_keyframes.csv
support_model/: README.md  extract_ocr.py  run.sh  shot_detection.py
support_model/paddle_ocr_yolo/: README.md  ocr_yolo.py
